--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  
   <br />
  
- <a class="button" href="https://preview.c9users.io/jvalentine12/coding-coyotes/main.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">
+ <a class="button" href="main.html">
     <img class="go" src="http://nathankressmusic.com/images/Go-Button-blue-214x211.png" alt="HTML tutorial" style="width:80px;height:60px;border:0">
 </a>
 
