--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
          
         <img class= "hatsImage" src="https://sketch.io/render/sk-5740ac4985c8a.png">
         <img class= "hatsImage" src="https://sketch.io/render/sk-5740ae3c8c9fc.png">
-        <img class="hatsImage" src="https://sketch.io/render/sk-5740b48adc7b7.png">
+        <img class="hatsImage red-hat" src="https://sketch.io/render/sk-5740b48adc7b7.png">
 </div>
 
 
