--- a/main.html
+++ b/main.html
@@ -66,8 +66,8 @@
  <p class="title-shoes title">Shoes</p>
  <div class="shoes"> 
                 <img class="shoesImage" src="https://sketch.io/render/sk-574099d1e865c.png">
-                <img class="shoesImage" src="https://sketch.io/render/sk-5740af484d802.png">
-                <img class="shoesImage" src="https://sketch.io/render/sk-5740ae808860b.png">
+                <img class="yellow-kicks shoesImage" src="https://sketch.io/render/sk-5740af484d802.png">
+                <img class="blue-kicks shoesImage" src="https://sketch.io/render/sk-5740ae808860b.png">
                 
             </div>
  
